Improvements over lab session 3. Fix typos.

--- a/reports/lab_session_2.tex
+++ b/reports/lab_session_2.tex
@@ -838,7 +838,7 @@ the eavesdropper enough so to achieve perfect secrecy.
 We can then see what happens if we increase the size of the constellation from
 128 to 256, thus setting $l_M = 8$ and using the variated encoding technique
 depicted in the preceding section.
-Figure~\ref{awgn_ber_8_15} shows the BER for different values of $\Lambda_B$,
+Figure~\ref{fig:awgn_ber_8_15} shows the BER for different values of $\Lambda_B$,
 which are reported precisely in the following table:
 
 \begin{tabular}{ | c | c | }
